--- a/.github/workflows/autobump.yml
+++ b/.github/workflows/autobump.yml
@@ -9,10 +9,10 @@ on:
     branches:
       - main
     paths:
-      - '.github/workflows/autobump.yml'
+      - ".github/workflows/autobump.yml"
   pull_request:
     paths:
-      - '.github/workflows/autobump.yml'
+      - ".github/workflows/autobump.yml"
 
 jobs:
   bump:
@@ -32,5 +32,6 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           casks: >
             clashx-meta
-            typeswitch
             fl-clash
+            loon4mac
+            typeswitch
