fix loon name in ci

--- a/.github/workflows/autobump.yml
+++ b/.github/workflows/autobump.yml
@@ -34,5 +34,5 @@ jobs:
           casks: >
             clashx-meta
             fl-clash
-            loon4mac
+            loon
             typeswitch
