--- a/.github/workflows/autobump.yml
+++ b/.github/workflows/autobump.yml
@@ -10,7 +10,7 @@ on:
       - main
     paths:
       - ".github/workflows/autobump.yml"
-      - "Casks/"
+      - "Casks/**"
   pull_request:
     paths:
       - ".github/workflows/autobump.yml"
