--- a/.github/workflows/autobump.yml
+++ b/.github/workflows/autobump.yml
@@ -3,7 +3,7 @@ name: Auto Bump
 on:
   schedule:
     # Run every hour.
-    - cron: "0 * * * *"
+    - cron: "0 0/6 * * *"
   workflow_dispatch:
   push:
     branches:
