--- a/.github/workflows/autobump.yml
+++ b/.github/workflows/autobump.yml
@@ -2,8 +2,8 @@ name: Auto Bump
 
 on:
   schedule:
-    # Run every hour.
-    - cron: "0 0/6 * * *"
+    # Run every day.
+    - cron: "0 3 * * *"
   workflow_dispatch:
   push:
     branches:
